src/test/resources/trialFiles/valid/ifWithReturnAndExit.wacc
begin
  int f() is
  int x = 1;
  if x == 1
  then
    return x
  else
    exit -1
  fi
  end
  int x = call f();
  println x
end
