src/test/resources/trialFiles/invalid/syntaxErr/ifNoReturnOrExitInElse1.wacc
# no return in else

# OUTPUT:
# #SYNTAX ERROR#

# Exit code:
# 100

begin
  bool f() is
    if true
    then
      return true
    else
      skip
    fi
  end

  skip
end
